Added script for creating PKI
Converted PKI script from bash to Python and added to repo.

--- a/config_example.json
+++ b/config_example.json
@@ -4,6 +4,9 @@
 		"fqdn":		"ilo.dyn.example.com",
 		"files": {
 			"monitor_file": "/storage/info/monitor.json"
+		},
+		"misc": {
+			"storage_ping_timeout_millis":		100
 		}
 	},
 	"storage": {
@@ -11,7 +14,7 @@
 		"fqdn":		"ilo.dyn.example.com"
 	},
 	"users": [ "rick", "morty" ],
-	"config": {
-		"storage_ping_timeout_millis":		100
+	"pki": {
+		"validity_years":	20
 	}
 }
