Fix mako variables
We now run all files through mako, so we need to escape ${foo} blocks in
config files.

--- a/ilo/conf/apache2/mods-enabled/ssl.conf
+++ b/ilo/conf/apache2/mods-enabled/ssl.conf
@@ -1,3 +1,4 @@
+<%text>
 <IfModule mod_ssl.c>
 
 	# Pseudo Random Number Generator (PRNG):
@@ -88,3 +89,4 @@
 </IfModule>
 
 # vim: syntax=apache ts=4 sw=4 sts=4 sr noet
+</%text>
