Configuration change to WSGI
Previously changed on the live system, now push conf changes into Git.

--- a/ilo/conf/apache2/sites-enabled/000-default.conf
+++ b/ilo/conf/apache2/sites-enabled/000-default.conf
@@ -14,16 +14,17 @@
 	ErrorLog ${APACHE_LOG_DIR}/error.log
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
 </%text>
-	<Location />
-		DirectoryIndex index.py index.html
-		SSLOptions +StdEnvVars
-		Options +ExecCGI -Indexes
-	</Location>
-
-	<Directory ${rootdir}/ilo/docroot>
-		Options +ExecCGI
-		AddHandler cgi-script .py
+	<Directory />
+		Options FollowSymLinks
+		AllowOverride None
 	</Directory>
+	<Directory ${rootdir}/ilo/wsgi>
+		Require all granted
+	</Directory>
+
+#	WSGIDaemonProcess wsgi-server processes=2 threads=15 user=www-data
+#	WSGIProcessGroup wsgi-server
+	WSGIScriptAlias / ${rootdir}/ilo/wsgi/wsgi.py
 </VirtualHost>
 
 # vim: syntax=apache ts=4 sw=4 sts=4 sr noet
