Add WSGIPythonPath to Apache2 config
From Apache2, module "server" coudln't be found, this should help.

--- a/ilo/conf/apache2/sites-enabled/000-default.conf
+++ b/ilo/conf/apache2/sites-enabled/000-default.conf
@@ -25,6 +25,7 @@
 #	WSGIDaemonProcess wsgi-server processes=2 threads=15 user=www-data
 #	WSGIProcessGroup wsgi-server
 	WSGIScriptAlias / ${rootdir}/ilo/wsgi/wsgi.py
+	WSGIPythonPath ${rootdir}/ilo/wsgi
 </VirtualHost>
 
 # vim: syntax=apache ts=4 sw=4 sts=4 sr noet
