Get client certificate information to Flask
Pass it through the request environment variables to the actual request.

--- a/ilo/conf/apache2/sites-enabled/000-default.conf
+++ b/ilo/conf/apache2/sites-enabled/000-default.conf
@@ -22,6 +22,8 @@ WSGIPythonPath ${rootdir}/ilo/wsgi
 	</Directory>
 	<Directory ${rootdir}/ilo/wsgi>
 		Require all granted
+		SSLOptions +StdEnvVars
+#		SSLOptions +ExportCertData
 	</Directory>
 
 #	WSGIDaemonProcess wsgi-server processes=2 threads=15 user=www-data
